@@ -26,7 +26,7 @@
 
 #define LIBRAW_MAJOR_VERSION  0
 #define LIBRAW_MINOR_VERSION  6
-#define LIBRAW_PATCH_VERSION  6
+#define LIBRAW_PATCH_VERSION  7
 #define LIBRAW_VERSION_TAIL   Release
 
 #define _LIBRAW_VERSION_MAKE(a,b,c,d) #a"."#b"."#c"-"#d
