@@ -1,8 +1,11 @@
 0.1.8
 ------------------------------------------------------------------------
 Fix PPM color preview extraction.
+Updated to libraw 0.6.7:
+ -Added support for Samsung S85.
+ -Changes in external jpeg (metadata) processing.
 Updated to libraw 0.6.6:
- -Changes in Panasonic FZ50 processing code
+ -Changes in Panasonic FZ50 processing code.
 Updated to libraw 0.6.5:
  -Fixed file descriptor and buffer memory leak when thumbnail extractor is called,
   but library object is not properly initialized.
